tests/neg/extension-colon.scala
extension (x: Int): // error
  def foo = x
