tests/neg/extension-colon.check
-- Error: tests/neg/extension-colon.scala:1:18 -------------------------------------------------------------------------
1 |extension (x: Int): // error
  |                  ^
  |                  no `:` expected here
